--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -72,7 +72,8 @@
         android:layout_marginStart="100dp"
         android:layout_marginBottom="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/EventsLocText">
+        android:layout_alignStart="@+id/EventsLocText"
+        android:onClick="eventDetails">
 
         <TextView
             android:id="@+id/info_text0"
@@ -170,7 +171,4 @@
         </android.support.v7.widget.CardView>
 
     </android.support.v7.widget.CardView>
-
-
-
 </RelativeLayout>
