--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -9,64 +9,96 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp">
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
 
         <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
-            <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/people1"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/person"
-                app:riv_corner_radius="20dip"
-                app:riv_mutate_background="true" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_marginLeft="10dp"
-                android:padding="8dp"
-                android:background="@drawable/receive_message"
-                android:text="Hello, world! This is Vinayak."
-                android:textSize="18sp" />
+                <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/people1"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/person"
+                    app:riv_corner_radius="20dip"
+                    app:riv_mutate_background="true" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:background="@drawable/receive_message"
+                    android:layout_marginRight="50dp"
+                    android:text="Hello, world! This is Vinayak. This is a very long text just to text what happens to long texts."
+                    android:textSize="18sp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layoutDirection="rtl"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="50dp"
+                    android:background="@drawable/send_message"
+                    android:text="Hello, world! This is Vinayak. This is a very long text just to text what happens to long texts."
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+
         </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:padding="8dp"
-            android:layoutDirection="rtl"
-            android:background="@drawable/receive_message"
-            android:text="Hello, world! This is Vinayak."
-            android:textSize="1sp" />
 
     </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_alignParentBottom="true"
-        android:layout_margin="5dp">
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:paddingTop="5dp">
 
         <EditText
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="8"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
             android:background="@drawable/message_send"
             android:textSize="16sp" />
 
         <Button
-            android:layout_width="0dp"
+            android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginBottom="5dp"
+            android:padding="5dp"
+            android:layout_weight="0"
             android:layout_marginLeft="5dp"
-            android:layout_weight="1"
             android:background="@drawable/send_button" />
     </LinearLayout>
 </RelativeLayout>
