--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -267,7 +267,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/cardview_dark_background"
+        android:background="@android:color/holo_orange_dark"
         android:layout_alignParentBottom="true"
         android:onClick="openChat">
         <TextView
