--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="lightning.structby.whosup.EventActivity">
+    tools:context="lightning.structby.whosup.EventActivity"
+    android:theme="@android:style/Theme.Material.Light.DarkActionBar">
 
     <TextView
         android:text="Select Location:"
