--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_chat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#CCCCCC"
+    android:orientation="vertical"
     tools:context="lightning.structby.whosup.ChatActivity">
 
     <android.support.v7.widget.RecyclerView
@@ -12,15 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_margin="5dp"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical"
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:layout_alignParentBottom="true"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
+        android:layout_weight="0"
         android:paddingTop="5dp">
 
         <EditText android:id="@+id/userMessage"
@@ -29,13 +30,12 @@
             android:layout_gravity="center"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-
             android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:background="@drawable/message_send"
             android:textSize="16sp" />
 
-        <Button
+        <Button android:id="@+id/sendButton"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginBottom="5dp"
@@ -43,6 +43,7 @@
             android:layout_weight="0"
             android:layout_marginLeft="5dp"
             android:onClick="sendMessage"
+            android:text="send"
             android:background="@drawable/send_button" />
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
