--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@android:color/white"
-    tools:context="lightning.structby.whosup.eventDetails">
+    tools:context="lightning.structby.whosup.EventDetails">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
