--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_chat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CCCCCC"
+    android:background="@drawable/chat_bg"
     android:orientation="vertical"
     tools:context="lightning.structby.whosup.ChatActivity">
 
@@ -13,41 +13,40 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
+        android:paddingBottom="5dp"
         android:scrollbars="vertical"
         android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_height="wrap_content"
         android:layout_weight="0"
-        android:paddingTop="5dp">
+
+        android:elevation="3dp"
+        android:padding="5dp"
+        android:background="@drawable/message_send">
 
         <EditText android:id="@+id/userMessage"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:layout_marginBottom="5dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="5dp"
             android:layout_weight="1"
-            android:background="@drawable/message_send"
+            android:background="@null"
             android:textSize="16sp" />
 
         <Button android:id="@+id/sendButton"
-            android:layout_width="40dp"
+            android:layout_width="50dp"
             android:layout_height="40dp"
-            android:layout_marginBottom="5dp"
-            android:padding="10dp"
             android:layout_weight="0"
-            android:layout_marginLeft="5dp"
             android:textAllCaps="false"
-            android:textSize="20sp"
+            android:textSize="22sp"
             android:gravity="center"
             android:layout_gravity="center"
             android:onClick="sendMessage"
-            android:text="send"
-            android:background="@drawable/send_button" />
+            style="?android:attr/borderlessButtonStyle"
+            android:text="send" />
     </LinearLayout>
 </LinearLayout>
+
