--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:paddingBottom="5dp"
+
         android:scrollbars="vertical"
         android:layout_weight="1" />
 
@@ -33,6 +33,7 @@
             android:paddingLeft="15dp"
             android:paddingRight="5dp"
             android:layout_weight="1"
+            android:hint="Enter a message"
             android:background="@null"
             android:textSize="16sp" />
 
