--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -131,6 +131,7 @@
                     app:riv_corner_radius="10dp"
                     app:riv_mutate_background="true"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginRight="5dp"
                     android:scaleType="centerCrop" />
                 <com.makeramen.roundedimageview.RoundedImageView
                     android:layout_width="85dp"
@@ -159,17 +160,19 @@
                 android:orientation="horizontal"
                 android:paddingBottom="10dp">
                 <android.support.v7.widget.CardView
-                    android:id="@+id/userGoing"
+                    android:id="@+id/userGoingLayout"
                     android:layout_width="85dp"
                     android:layout_height="85dp"
                     app:cardCornerRadius="10dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginBottom="5dp"
-                    app:cardBackgroundColor="@android:color/white">
+                    app:cardBackgroundColor="@android:color/white"
+                    android:clickable="true"
+                    android:onClick="joinEvent">
                     <RelativeLayout
-                        android:id="@+id/userGoingLayout"
+                        android:id="@+id/userGoing"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
@@ -191,6 +194,7 @@
                                 android:gravity="left"/>
 
                             <TextView
+                                android:id="@+id/goingText"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Join"
@@ -205,17 +209,16 @@
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
-                    android:id="@+id/peopleCount"
+                    android:id="@+id/peopleCountLayout"
                     android:layout_width="85dp"
                     android:layout_height="85dp"
                     app:cardCornerRadius="10dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginBottom="5dp"
                     app:cardBackgroundColor="@android:color/holo_green_light">
                     <RelativeLayout
-                        android:id="@+id/peopleCountLayout"
+                        android:id="@+id/peopleCount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
